TEST_PROGRAMS/INVALID/shabbir_hussain/prog6.min
var x : real;

x = while;

